--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.datasource.url:jdbc:mysql://localhost:3306/fashionnet?allowPublicKeyRetri
-eval=true&useSSL=false&useTimezone=true&serverTimezone=GMT&characterEncoding=U
-TF-8
+spring.datasource.url:jdbc:mysql://localhost:3306/fashionnet?allowPublicKeyRetrieval=true&useSSL=false&useTimezone=true&serverTimezone=GMT&characterEncoding=UTF-8
 spring.datasource.username: root
 spring.datasource.password: root
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
